--- a/css.css
+++ b/css.css
@@ -1,6 +1,10 @@
 
 
 .s{
+  --webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-position: center center;
   background-attachment: fixed;
   background-image: url("trip.gif");
   background-size: cover;
