--- a/css.css
+++ b/css.css
@@ -2,7 +2,7 @@
 
 .s{
   background-repeat: no-repeat;
-  background-image: url("trip.gif");
+  background-image: url("g.gif");
   background-color: black;
   background-size: cover;
   color: white;
